--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cloud_firestore: ^4.8.2
   extended_image: ^7.0.2
   firebase_storage: ^11.2.4
+  google_mlkit_text_recognition: ^0.9.0
+  image_picker: ^1.0.1
 
 dev_dependencies:
   flutter_test:
