--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^11.2.4
   google_mlkit_text_recognition: ^0.9.0
   image_picker: ^1.0.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
