--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.18.1
   connectivity_plus: ^4.0.1
   http: ^0.13.6
+  firebase_auth: ^4.6.0
 
 dev_dependencies:
   flutter_test:
