--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.3.6
   go_router: ^9.0.3
-  slang: ^3.20.0
+  slang: ^3.17.0
+  slang_flutter: ^3.17.0
   freezed_annotation: ^2.2.0
   firebase_core: ^2.14.0
   cloud_firestore: ^4.8.2
@@ -49,6 +52,7 @@ dependencies:
   firebase_auth: ^4.6.0
   flutter_map: ^4.0.0
   cached_network_image: ^3.2.3
+  
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +66,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   freezed: ^2.3.5
   build_runner: ^2.3.3
+  slang_build_runner: ^3.17.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
